// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`messages-component render the UI as expected 1`] = `
<div
  className="Card"
>
  <button
    type="button"
  >
    delete
  </button>
  <h3>
    First card
  </h3>
  <p>
    lorem ipsum
  </p>
</div>
`;

exports[`messages-component render the UI as expected 2`] = `
<div
  className="Card"
>
  <button
    type="button"
  >
    delete
  </button>
  <h3>
    Second card
  </h3>
  <p>
    lorem ipsum
  </p>
</div>
`;
